--- a/vagrantfile
+++ b/vagrantfile
@@ -68,6 +68,6 @@ Vagrant.configure(2) do |config|
   #   sudo apt-get install -y apache2
   # SHELL
   #
-  config.vm.hostname = "vagrant-test.local"
+  config.vm.hostname = "vagrant-lamp.base.local"
   config.vm.provision "shell", path: "provision.sh"
 end
