--- a/vagrantfile
+++ b/vagrantfile
@@ -9,16 +9,16 @@ Vagrant.configure(2) do |config|
 
   config.vm.define "precise" do |precise|
     precise.vm.box = "ubuntu/precise64"
-    precise.vm.forward_port 80, 8080
     precise.vm.hostname = "lamp-precise.local"
+    precise.vm.network "private_network", ip:"192.168.33.14"
     precise.vm.provision "shell", path: "src/precise.sh"
     precise.vm.provision "reload"
   end
 
   config.vm.define "trusty" do |trusty|
     trusty.vm.box = "ubuntu/trusty64"
-    trusty.vm.forward_port 80, 8888
     trusty.vm.hostname = "lamp-trusty.local"
+    trusty.vm.network "private_network", ip:"192.168.33.15"
     trusty.vm.provision "shell", path: "src/trusty.sh"
     trusty.vm.provision "reload"
   end
