--- a/vagrantfile
+++ b/vagrantfile
@@ -24,6 +24,7 @@ Vagrant.configure(2) do |config|
     precise.vm.box = "ubuntu/precise64"
     precise.vm.hostname = "lamp-precise.local"
     precise.vm.provision "shell", path: "src/precise.sh"
+    precise.vm.provision "reload"
     cache_dir = local_cache(precise.vm.box)
     precise.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
   end
@@ -33,6 +34,7 @@ Vagrant.configure(2) do |config|
     trusty.vm.box = "ubuntu/trusty64"
     trusty.vm.hostname = "lamp-trusty.local"
     trusty.vm.provision "shell", path: "src/trusty.sh"
+    trusty.vm.provision "reload"
     cache_dir = local_cache(trusty.vm.box)
     trusty.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
   end
@@ -44,6 +46,7 @@ Vagrant.configure(2) do |config|
     precise_test.vm.hostname = "lamp-precise-test.local"
     precise_test.vm.network "private_network", ip:"192.168.33.14"
     precise_test.vm.provision "shell", path: "src/precise.sh", args: "test"
+    precise_test.vm.provision "reload"
     cache_dir = local_cache(precise_test.vm.box)
     precise_test.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
   end
@@ -53,6 +56,7 @@ Vagrant.configure(2) do |config|
     trusty_test.vm.hostname = "lamp-trusty-test.local"
     trusty_test.vm.network "private_network", ip:"192.168.33.15"
     trusty_test.vm.provision "shell", path: "src/trusty.sh", args: "test"
+    trusty_test.vm.provision "reload"
     cache_dir = local_cache(trusty_test.vm.box)
     trusty_test.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
   end
