--- a/vagrantfile
+++ b/vagrantfile
@@ -22,7 +22,7 @@ Vagrant.configure(2) do |config|
   config.vm.define "precise" do |precise|
     precise.ssh.insert_key = false
     precise.vm.box = "ubuntu/precise64"
-    precise.vm.hostname = "lamp-precise.local"
+    precise.vm.hostname = "senki-precise.local"
     precise.vm.provision "shell", path: "src/precise.sh"
     precise.vm.provision "reload"
     cache_dir = local_cache(precise.vm.box)
@@ -32,7 +32,7 @@ Vagrant.configure(2) do |config|
   config.vm.define "trusty" do |trusty|
     trusty.ssh.insert_key = false
     trusty.vm.box = "ubuntu/trusty64"
-    trusty.vm.hostname = "lamp-trusty.local"
+    trusty.vm.hostname = "senki-trusty.local"
     trusty.vm.provision "shell", path: "src/trusty.sh"
     trusty.vm.provision "reload"
     cache_dir = local_cache(trusty.vm.box)
@@ -43,7 +43,7 @@ Vagrant.configure(2) do |config|
 
   config.vm.define "precise_test" do |precise_test|
     precise_test.vm.box = "ubuntu/precise64"
-    precise_test.vm.hostname = "lamp-precise-test.local"
+    precise_test.vm.hostname = "senki-precise-test.local"
     precise_test.vm.network "private_network", ip:"192.168.33.14"
     precise_test.vm.provision "shell", path: "src/precise.sh", args: "test"
     precise_test.vm.provision "reload"
@@ -53,7 +53,7 @@ Vagrant.configure(2) do |config|
 
   config.vm.define "trusty_test" do |trusty_test|
     trusty_test.vm.box = "ubuntu/trusty64"
-    trusty_test.vm.hostname = "lamp-trusty-test.local"
+    trusty_test.vm.hostname = "senki-trusty-test.local"
     trusty_test.vm.network "private_network", ip:"192.168.33.15"
     trusty_test.vm.provision "shell", path: "src/trusty.sh", args: "test"
     trusty_test.vm.provision "reload"
