--- a/vagrantfile
+++ b/vagrantfile
@@ -39,6 +39,16 @@ Vagrant.configure(2) do |config|
     trusty.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
   end
 
+  config.vm.define "trusty_php7" do |trusty_php7|
+    trusty_php7.ssh.insert_key = false
+    trusty_php7.vm.box = "ubuntu/trusty64"
+    trusty_php7.vm.hostname = "senki-trusty-php7.local"
+    trusty_php7.vm.provision "shell", path: "src/trusty-php7.sh"
+    trusty_php7.vm.provision "reload"
+    cache_dir = local_cache(trusty_php7.vm.box)
+    trusty_php7.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
+  end
+
   # test
 
   config.vm.define "precise_test" do |precise_test|
@@ -59,6 +69,16 @@ Vagrant.configure(2) do |config|
     trusty_test.vm.provision "reload"
     cache_dir = local_cache(trusty_test.vm.box)
     trusty_test.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
+  end
+
+  config.vm.define "trusty_php7_test" do |trusty_php7_test|
+    trusty_php7_test.vm.box = "ubuntu/trusty64"
+    trusty_php7_test.vm.hostname = "senki-trusty-php7-test.local"
+    trusty_php7_test.vm.network "private_network", ip:"192.168.33.16"
+    trusty_php7_test.vm.provision "shell", path: "src/trusty-php7.sh", args: "test"
+    trusty_php7_test.vm.provision "reload"
+    cache_dir = local_cache(trusty_php7_test.vm.box)
+    trusty_php7_test.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
   end
 
 end
