--- a/vagrantfile
+++ b/vagrantfile
@@ -23,7 +23,7 @@ Vagrant.configure(2) do |config|
     precise.ssh.insert_key = false
     precise.vm.box = "ubuntu/precise64"
     precise.vm.hostname = "senki-precise.local"
-    precise.vm.provision "shell", path: "src/precise.sh"
+    precise.vm.provision "shell", path: "src/precise.sh", args: "prod"
     precise.vm.provision "reload"
     cache_dir = local_cache(precise.vm.box)
     precise.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
@@ -33,7 +33,7 @@ Vagrant.configure(2) do |config|
     trusty.ssh.insert_key = false
     trusty.vm.box = "ubuntu/trusty64"
     trusty.vm.hostname = "senki-trusty.local"
-    trusty.vm.provision "shell", path: "src/trusty.sh"
+    trusty.vm.provision "shell", path: "src/trusty.sh", args: "prod"
     trusty.vm.provision "reload"
     cache_dir = local_cache(trusty.vm.box)
     trusty.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
@@ -47,7 +47,7 @@ Vagrant.configure(2) do |config|
     trusty_php7.ssh.insert_key = false
     trusty_php7.vm.box = "ubuntu/trusty64"
     trusty_php7.vm.hostname = "senki-trusty-php7.local"
-    trusty_php7.vm.provision "shell", path: "src/trusty-php7.sh"
+    trusty_php7.vm.provision "shell", path: "src/trusty.sh", args: ["prod", "php7"]
     trusty_php7.vm.provision "reload"
     cache_dir = local_cache(trusty_php7.vm.box)
     trusty_php7.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
@@ -87,7 +87,7 @@ Vagrant.configure(2) do |config|
     trusty_php7_test.vm.box = "ubuntu/trusty64"
     trusty_php7_test.vm.hostname = "senki-trusty-php7-test.local"
     trusty_php7_test.vm.network "private_network", ip:"192.168.33.16"
-    trusty_php7_test.vm.provision "shell", path: "src/trusty-php7.sh", args: "test"
+    trusty_php7_test.vm.provision "shell", path: "src/trusty-php7.sh", args: ["test", "php7"]
     trusty_php7_test.vm.provision "reload"
     cache_dir = local_cache(trusty_php7_test.vm.box)
     trusty_php7_test.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
