--- a/vagrantfile
+++ b/vagrantfile
@@ -87,7 +87,7 @@ Vagrant.configure(2) do |config|
     trusty_php7_test.vm.box = "ubuntu/trusty64"
     trusty_php7_test.vm.hostname = "senki-trusty-php7-test.local"
     trusty_php7_test.vm.network "private_network", ip:"192.168.33.16"
-    trusty_php7_test.vm.provision "shell", path: "src/trusty-php7.sh", args: ["test", "php7"]
+    trusty_php7_test.vm.provision "shell", path: "src/trusty.sh", args: ["test", "php7"]
     trusty_php7_test.vm.provision "reload"
     cache_dir = local_cache(trusty_php7_test.vm.box)
     trusty_php7_test.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
