--- a/vagrantfile
+++ b/vagrantfile
@@ -52,7 +52,7 @@ Vagrant.configure(2) do |config|
     cache_dir = local_cache(trusty_php7.vm.box)
     trusty_php7.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
     trusty_php7.vm.provider "virtualbox" do |v|
-      v.memory = 1024
+      v.memory = 2048
     end
 
   end
@@ -67,6 +67,11 @@ Vagrant.configure(2) do |config|
     precise_test.vm.provision "reload"
     cache_dir = local_cache(precise_test.vm.box)
     precise_test.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
+    precise_test.vm.synced_folder "vagrant/test", "/var/www",
+        id: "www-data",
+        owner: "www-data",
+        group: "www-data",
+        mount_options: ["dmode=775,fmode=664"]
   end
 
   config.vm.define "trusty_test" do |trusty_test|
@@ -77,6 +82,11 @@ Vagrant.configure(2) do |config|
     trusty_test.vm.provision "reload"
     cache_dir = local_cache(trusty_test.vm.box)
     trusty_test.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
+    trusty_test.vm.synced_folder "vagrant/test", "/var/www/html",
+        id: "www-data",
+        owner: "www-data",
+        group: "www-data",
+        mount_options: ["dmode=775,fmode=664"]
     trusty_test.vm.provider "virtualbox" do |v|
       v.memory = 1024
     end
@@ -91,8 +101,13 @@ Vagrant.configure(2) do |config|
     trusty_php7_test.vm.provision "reload"
     cache_dir = local_cache(trusty_php7_test.vm.box)
     trusty_php7_test.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
+    trusty_php7_test.vm.synced_folder "vagrant/test", "/var/www/html",
+        id: "www-data",
+        owner: "www-data",
+        group: "www-data",
+        mount_options: ["dmode=775,fmode=664"]
     trusty_php7_test.vm.provider "virtualbox" do |v|
-      v.memory = 1024
+      v.memory = 2048
     end
 
   end
