--- a/vagrantfile
+++ b/vagrantfile
@@ -27,6 +27,9 @@ Vagrant.configure(2) do |config|
     precise.vm.provision "reload"
     cache_dir = local_cache(precise.vm.box)
     precise.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
+    precise.vm.provider "virtualbox" do |v|
+      v.name = precise.vm.hostname
+    end
   end
 
   config.vm.define "trusty" do |trusty|
@@ -38,7 +41,8 @@ Vagrant.configure(2) do |config|
     cache_dir = local_cache(trusty.vm.box)
     trusty.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
     trusty.vm.provider "virtualbox" do |v|
-      v.memory = 1024
+      v.name = trusty.vm.hostname
+      v.memory = 2048
     end
 
   end
@@ -52,7 +56,9 @@ Vagrant.configure(2) do |config|
     cache_dir = local_cache(trusty_php7.vm.box)
     trusty_php7.vm.synced_folder cache_dir, "/var/cache/apt/archives/"
     trusty_php7.vm.provider "virtualbox" do |v|
+      v.name = trusty_php7.vm.hostname
       v.memory = 2048
+      v.cpus = 2
     end
 
   end
@@ -72,6 +78,9 @@ Vagrant.configure(2) do |config|
         owner: "www-data",
         group: "www-data",
         mount_options: ["dmode=775,fmode=664"]
+    precise_test.vm.provider "virtualbox" do |v|
+      v.name = precise_test.vm.hostname
+    end
   end
 
   config.vm.define "trusty_test" do |trusty_test|
@@ -88,7 +97,8 @@ Vagrant.configure(2) do |config|
         group: "www-data",
         mount_options: ["dmode=775,fmode=664"]
     trusty_test.vm.provider "virtualbox" do |v|
-      v.memory = 1024
+      v.name = trusty_test.vm.hostname
+      v.memory = 2048
     end
 
   end
@@ -107,7 +117,9 @@ Vagrant.configure(2) do |config|
         group: "www-data",
         mount_options: ["dmode=775,fmode=664"]
     trusty_php7_test.vm.provider "virtualbox" do |v|
+      v.name = trusty_php7_test.vm.hostname
       v.memory = 2048
+      v.cpus = 2
     end
 
   end
